style.css
/* ... */
section.work .menu-1 .labels {
    justify-content: flex-end;
    align-self: flex-end;
}

section.work .menu-1 .description {
    max-width: 100%;
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

section.work .menu-1 .description h3 {
    font-size: 1.5rem;
    font-weight: 500;
    max-width: 100%;
    text-transform: uppercase;
}

section.work .menu-1 .description p {
    font-size: 1rem;
    font-weight: 400;
    color: var(--text-secondary);
}

section.work .menu-1 .description button {
    background-color: rgba(255, 255, 255, 1);
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    padding: .5rem 1.5rem;
    border-radius: 1.5rem;
    color: #333;
    text-transform: uppercase;
    font-weight: 400;
    font-size: 1rem;
    cursor: pointer;
}

section.work .menu-1 .description button:hover {
    text-decoration: underline;
}

section.work .menu-1 .description button:hover svg {
    animation: horizontal-wave 2s infinite;
}

@keyframes horizontal-wave {
    0%,
    60% {
        transform: translateX(0);
    }

    20%, 
    40% {
		transform: translateX(-4px);
	}

	30%,
	50% {
		transform: translateX(4px);
	}

}

section.work .menu-1 .labels, 
section.work .menu-1 h3, 
section.work .menu-1 p, 
section.work .menu-1 button {
    position: relative;
    z-index: 2;
}

section.work .menu-1::after {
    position: absolute;
    content: "";
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.5);
    border-radius: 1rem;
    z-index: 1;
}

section.work .menu-2 {
    grid-area: menu-2;
    min-height: 687px;
    background: url(assets/images/menu-2-bg.webp) no-repeat center center;
    background-size: cover;
    border-radius: 1rem;
    padding: 1rem;
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    gap: 1rem;
}


section.work .menu-2::after {
    position: absolute;
    content: "";
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.5);
    border-radius: 1rem;
    z-index: 1;
}

section.work .menu-2 h3,
section.work .menu-2 button {
    position: relative;
    z-index: 2;
}

section.work .menu-2 h3 {
    font-size: 1.5rem;
    font-weight: 500;
    max-width: 100%;
    text-transform: uppercase;
}

section.work .menu-2  button {
    background-color: rgba(255, 255, 255, 0.1);
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    padding: .5rem 1.5rem;
    border-radius: 1.5rem;
    color: #fff;
    border: 1px solid #fff;
    text-transform: uppercase;
    font-weight: 400;
    font-size: 1rem;
    cursor: pointer;
}

section.work .menu-2 button:hover {
    text-decoration: underline;
}

section.work .menu-2 button:hover svg {
    animation: horizontal-wave 2s infinite;
}


section.work .menu-3 {
    grid-area: menu-3;
    min-height: 687px;
    background: url(assets/images/menu-3-bg.webp) no-repeat center center;
    background-size: cover;
    border-radius: 1rem;
    padding: 1rem;
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    gap: 1rem;
}


section.work .menu-3::after {
    position: absolute;
    content: "";
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.5);
    border-radius: 1rem;
    z-index: 1;
}

section.work .menu-3 h3,
section.work .menu-3 button {
    position: relative;
    z-index: 2;
}

section.work .menu-3 h3 {
    font-size: 1.5rem;
    font-weight: 500;
    max-width: 100%;
    text-transform: uppercase;
}

section.work .menu-3  button {
    background-color: rgba(255, 255, 255, 0.1);
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    padding: .5rem 1.5rem;
    border-radius: 1.5rem;
    color: #fff;
    border: 1px solid #fff;
    text-transform: uppercase;
    font-weight: 400;
    font-size: 1rem;
    cursor: pointer;
}

section.work .menu-3 button:hover {
    text-decoration: underline;
}

section.work .menu-3 button:hover svg {
    animation: horizontal-wave 2s infinite;
}

section.award {
    display: grid;
    grid-template-columns: 5fr 1fr 4fr;
    grid-template-rows: 1fr 2fr;
    grid-template-areas: "page-number title title" "award-list award-list image";
    position: relative;
    gap: 4rem;
}

section.award .page-number {
    grid-area: page-number;
}

section.award h2 {
    grid-area: title;
}

section.award .awards {
    grid-area: award-list;
}

section.award .awards figure {
    grid-area: image;
}

section.award input[type=radio] {
    display: none;
}

section.award figure {
    position: absolute;
    right: 0;
    top: 0;
    opacity: 0;
    transition: opacity ease .5s;
}

section.award figure img {
    border-radius: 1.2rem;
}

section.award input[type=radio]:checked + figure {
    opacity: 1;
}

section.award input[type=radio]:checked ~ label {
    background: var(--bg-1);
}

section.award input[type=radio]:checked ~ label p {
    color: var(--text-main);
}

section.award input[type=radio]:checked ~ label svg path {
    stroke: #333;
}

section.award input[type=radio]:checked ~ label svg {
    background-color: #fff;
    border-color: #333;
}

section.award label {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    gap: 2rem;
    padding: 2rem;
    border-radius: 1rem;
    cursor: pointer;
}

section.award label:hover p {
    text-decoration: underline;
}

section.award label .text {
    display: flex;
    flex-direction: row;
    gap: 1rem;
    align-items: center;
}

section.award label svg {
    width: 3rem;
    height: 3rem;
    padding: .75rem;
    display: flex;
    align-items: center;
    justify-content: center;
    border: 1px solid #fff;
    border-radius: 50%;
}
/* ... */

